--- a/BlackBox_Evaluation.ipynb
+++ b/BlackBox_Evaluation.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "BlackBox Evaluation",
+      "name": "BlackBox_Evaluation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,6 +40,52 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Installing libraries"
+      ],
+      "metadata": {
+        "id": "iPROapoCYHeA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q pytorchvideo\n",
+        "!pip -q install pytorch_ranger\n",
+        "!pip install pytorch_optimizer"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HHMJolrbYGzC",
+        "outputId": "1e8f8510-1ac3-4a1b-84c1-1ca4de0f4598"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 132 kB 4.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 50 kB 4.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 36.7 MB 1.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 596 kB 38.9 MB/s \n",
+            "\u001b[?25h  Building wheel for pytorchvideo (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for fvcore (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting pytorch_optimizer\n",
+            "  Downloading pytorch_optimizer-0.5.0-py3-none-any.whl (61 kB)\n",
+            "\u001b[K     |████████████████████████████████| 61 kB 427 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: torch>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from pytorch_optimizer) (1.10.0+cu111)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch>=1.4.0->pytorch_optimizer) (3.10.0.2)\n",
+            "Installing collected packages: pytorch-optimizer\n",
+            "Successfully installed pytorch-optimizer-0.5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Importing libraries"
       ],
       "metadata": {
@@ -53,15 +100,18 @@
       },
       "outputs": [],
       "source": [
-        "import tensorflow as tf\n",
-        "import tensorflow_hub as hub\n",
         "import cv2\n",
         "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "import os\n",
-        "import pandas as pd\n",
-        "import warnings\n",
-        "warnings.filterwarnigns('ignore')\n",
+        "import json\n",
+        "from typing import Dict\n",
+        "from tqdm.notebook import tqdm\n",
+        "\n",
+        "\n",
+        "from sklearn.metrics import classification_report\n",
         "from skimage.transform import resize\n",
+        "import pandas as pd\n",
         "\n",
         "import torch\n",
         "from torch import nn\n",
@@ -69,29 +119,34 @@
         "from torch.nn import functional as F\n",
         "from torch.nn import init\n",
         "\n",
-        "import torch\n",
-        "import json\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "\n",
         "from torchvision.transforms import Compose, Lambda\n",
         "from torchvision.transforms._transforms_video import (\n",
         "    CenterCropVideo,\n",
         "    NormalizeVideo,\n",
         ")\n",
+        "\n",
+        "import pytorch_optimizer\n",
         "from pytorchvideo.data.encoded_video import EncodedVideo\n",
+        "from pytorch_ranger import Ranger\n",
         "from pytorchvideo.transforms import (\n",
         "    ApplyTransformToKey,\n",
         "    ShortSideScale,\n",
         "    UniformTemporalSubsample,\n",
         "    UniformCropVideo\n",
-        ")\n",
-        "from typing import Dict\n",
-        "\n",
-        "!pip -q install pytorch_ranger\n",
-        "\n",
-        "from tqdm.notebook import tqdm\n",
-        "\n",
-        "from pytorch_ranger import Ranger\n",
-        "from sklearn.metrics import classification_report"
+        ")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Checking versions"
+      ],
+      "metadata": {
+        "id": "c2JKH4Siczul"
+      }
     },
     {
       "cell_type": "code",
@@ -317,6 +372,8 @@
         "sampling_rate = 2\n",
         "frames_per_second = 30\n",
         "alpha = 4\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "class PackPathway(torch.nn.Module):\n",
         "    \"\"\"\n",
@@ -566,9 +623,9 @@
         "\n",
         "for index, (id, label) in enumerate(tqdm(zip(df.id_new, df.id) , total=len(df))): # Iterating through the test dataframe\n",
         "  correct_pred += evaluate(root + id, student_model, label)\n",
-        "  if index == 49:                \n",
+        "  if index == 70:                \n",
         "    break\n",
-        "print(f'Accuracy: {correct_pred/50}')"
+        "print(f'Accuracy: {correct_pred/70}')"
       ],
       "metadata": {
         "id": "JKHrQ7LJ7iHE"
